--- a/drink.html
+++ b/drink.html
@@ -52,9 +52,7 @@
                 </div>
                 <div class="drink-visual">
                     <div class="aura-light"></div>
-                    <img src="WhatsApp Image 2026-02-11 at 22.37.16.jpeg" alt="Red Bull Cupid Can" class="main-can">
-                    <img src="WhatsApp Image 2026-02-11 at 22.37.16.jpeg" alt="Red Bull Pink Edition"
-                        class="secondary-can">
+                    <img src="can_cupid_edition.jpg" alt="Red Bull Pink Edition" class="main-can">
                 </div>
             </div>
         </section>
