--- a/products.html
+++ b/products.html
@@ -372,19 +372,19 @@
             <div class="products-grid">
                 <div class="product-card">
                     <div class="product-title sugarfree-title">Red Bull<br>Sugarfree</div>
-                    <img src="WhatsApp Image 2026-02-11 at 22.36.52.jpeg" alt="Red Bull Sugarfree">
+                    <img src="can_sugarfree.jpg" alt="Red Bull Sugarfree">
                 </div>
                 <div class="product-card">
                     <div class="product-title pink-title">Red Bull<br>Pink Edition</div>
-                    <img src="WhatsApp Image 2026-02-11 at 22.37.16.jpeg" alt="Red Bull Pink Edition">
+                    <img src="can_cupid_edition.jpg" alt="Red Bull Pink Edition">
                 </div>
                 <div class="product-card">
                     <div class="product-title yellow-title">Red Bull<br>Yellow Edition</div>
-                    <img src="WhatsApp Image 2026-02-11 at 22.37.10.jpeg" alt="Red Bull Yellow Edition">
+                    <img src="can_yellow.jpg" alt="Red Bull Yellow Edition">
                 </div>
                 <div class="product-card">
                     <div class="product-title red-title">Red Bull<br>Red Edition</div>
-                    <img src="WhatsApp Image 2026-02-11 at 22.37.01.jpeg" alt="Red Bull Red Edition">
+                    <img src="can_red.jpg" alt="Red Bull Red Edition">
                 </div>
             </div>
         </section>
