maximize drink page image size

--- a/products.html
+++ b/products.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Products | Red Bull</title>
-    <link rel="stylesheet" href="style.css?v=2">
+    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -376,7 +376,7 @@
                 </div>
                 <div class="product-card">
                     <div class="product-title pink-title">Red Bull<br>Pink Edition</div>
-                    <img src="can_cupid_edition.jpg" alt="Red Bull Pink Edition">
+                    <img src="can_pink.jpg" alt="Red Bull Pink Edition">
                 </div>
                 <div class="product-card">
                     <div class="product-title yellow-title">Red Bull<br>Yellow Edition</div>
