--- a/gallery.html
+++ b/gallery.html
@@ -28,7 +28,25 @@
             <a href="gallery.html" class="active">Gallery</a>
             <a href="discover.html" class="btn-highlight">Join the Love</a>
         </div>
+        <div class="menu-toggle" style="cursor: pointer; margin-left: 20px;">
+            <i class="fas fa-bars"></i>
+        </div>
     </nav>
+
+    <!-- Side Menu Overlay -->
+    <div class="side-menu">
+        <div class="close-menu"><i class="fas fa-times"></i></div>
+        <nav class="mobile-nav">
+            <a href="index.html">Home</a>
+            <a href="products.html">Energy Drinks</a>
+            <a href="drink.html">The Drink</a>
+            <a href="gallery.html">Gallery</a>
+            <a href="discover.html">Join Movement</a>
+            <a href="#">Events</a>
+            <a href="#">Athletes</a>
+            <a href="#">Red Bull TV</a>
+        </nav>
+    </div>
 
     <main class="section-container" style="padding-top: 160px;">
         <div style="text-align: center; margin-bottom: 80px;">
@@ -41,7 +59,7 @@
 
         <div class="gallery-grid">
             <div class="gallery-item item-1">
-                <img src="https://images.unsplash.com/photo-1514525253361-b83f859b73c0?auto=format&fit=crop&w=1200"
+                <img src="https://images.unsplash.com/photo-1501281668745-f7f57925c3b4?auto=format&fit=crop&w=1200"
                     alt="Concert Crowd">
                 <div class="gallery-overlay">
                     <span style="font-size: 0.8rem; text-transform: uppercase; letter-spacing: 2px;">Vibe</span>
@@ -85,9 +103,40 @@
         </div>
     </main>
 
-    <footer style="padding: 4rem 5%; text-align: center; border-top: 1px solid var(--glass-border); background: #000;">
-        <p style="color: var(--text-gray); font-size: 0.9rem;">&copy; 2026 Red Bull Cupid's Edition. All rights
-            reserved.</p>
+    <footer class="main-footer">
+        <div class="footer-content">
+            <div class="footer-col">
+                <h4>Red Bull</h4>
+                <ul>
+                    <li><a href="products.html">Products</a></li>
+                    <li><a href="drink.html">Energy Drink</a></li>
+                    <li><a href="#">Sugarfree</a></li>
+                    <li><a href="#">Zero</a></li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h4>World of Red Bull</h4>
+                <ul>
+                    <li><a href="#">TV</a></li>
+                    <li><a href="#">Athletes</a></li>
+                    <li><a href="#">Events</a></li>
+                    <li><a href="#">Merchandise</a></li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h4>Follow Us</h4>
+                <div class="social-icons">
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="#"><i class="fab fa-tiktok"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-youtube"></i></a>
+                </div>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2026 Red Bull Cupid's Edition. All rights reserved. | <a href="#">Privacy Policy</a> | <a
+                    href="#">Terms of Use</a></p>
+        </div>
     </footer>
 
     <script src="script.js"></script>
