--- a/index.html
+++ b/index.html
@@ -28,10 +28,25 @@
             <a href="gallery.html">Gallery</a>
             <a href="discover.html" class="btn-highlight">Join the Love</a>
         </div>
-        <div class="mobile-menu-btn">
+        <div class="menu-toggle" style="cursor: pointer; margin-left: 20px;">
             <i class="fas fa-bars"></i>
         </div>
     </nav>
+
+    <!-- Side Menu Overlay -->
+    <div class="side-menu">
+        <div class="close-menu"><i class="fas fa-times"></i></div>
+        <nav class="mobile-nav">
+            <a href="index.html">Home</a>
+            <a href="products.html">Energy Drinks</a>
+            <a href="drink.html">The Drink</a>
+            <a href="gallery.html">Gallery</a>
+            <a href="discover.html">Join Movement</a>
+            <a href="#">Events</a>
+            <a href="#">Athletes</a>
+            <a href="#">Red Bull TV</a>
+        </nav>
+    </div>
 
     <main class="hero">
         <div class="hero-left-glow"></div>
@@ -61,7 +76,7 @@
 
             <div class="mascot-container">
                 <div class="bull-aura"></div>
-                <img src="cupid.jpeg" alt="Red Bull Cupid" class="cupid-mascot" id="cupidBull">
+                <img src="img.png" alt="Red Bull" class="cupid-mascot" id="cupidBull">
             </div>
         </div>
 
@@ -107,8 +122,8 @@
             <div class="footer-col">
                 <h4>Red Bull</h4>
                 <ul>
-                    <li><a href="#">Products</a></li>
-                    <li><a href="#">Energy Drink</a></li>
+                    <li><a href="products.html">Products</a></li>
+                    <li><a href="drink.html">Energy Drink</a></li>
                     <li><a href="#">Sugarfree</a></li>
                     <li><a href="#">Zero</a></li>
                 </ul>
